test : auc-77 유저이름 으로 유저 검색 정상 적인 controller 추가